--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "19.1.0",
     "react-to-print": "^3.2.0",
     "recharts": "^3.3.0",
-    "swr": "^2.3.6"
+    "swr": "^2.3.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
