--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.3",
+    "lucide-react": "^0.553.0",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-big-calendar": "^1.19.4",
