--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-to-print": "^3.2.0",
     "recharts": "^3.3.0",
     "swr": "^2.3.6",
