--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.553.0",
-    "next": "15.5.6",
+    "next": "^15.5.7",
     "prettier": "^3.6.2",
-    "react": "19.1.0",
+    "react": "^19.1.2",
     "react-big-calendar": "^1.19.4",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.2",
     "react-icons": "^5.5.0",
     "react-to-print": "^3.2.0",
     "recharts": "^3.3.0",
